Uber deep link working

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -122,4 +122,6 @@ dependencies {
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:0.19.+"
     compile project(':react-native-gmaps')
+    compile project(':RNWebView')
+
 }
