--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -5,3 +5,6 @@ include ':app'
 include ':react-native-gmaps', ':app'
 project(':react-native-gmaps').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-gmaps/android/app')
 
+include ':RNWebView', ':app'
+project(':RNWebView').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-webview-android')
+
